--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/com/cnfa/Activity/AboutUsActivity.java=UTF-8
 encoding//src/com/cnfa/Activity/CityListActivity.java=UTF-8
 encoding//src/com/cnfa/Activity/CityListToNewspaperActivity.java=UTF-8
 encoding//src/com/cnfa/Activity/FavoriteAdsActivity.java=UTF-8
