--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cnfa"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="3"
+    android:versionName="1.2" >
 
     <uses-sdk
         android:minSdkVersion="9"
-        android:targetSdkVersion="19" />
+        android:targetSdkVersion="17"
+        android:maxSdkVersion="19" />
 
     <uses-permission android:name="android.permission.SEND_SMS" >
     </uses-permission>
@@ -20,7 +21,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
-        android:debuggable="true"
+        
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:theme="@style/app_theme" >
