--- a/CNFA AD /CNFANews App/CNFANews App-Info.plist
+++ b/CNFA AD /CNFANews App/CNFANews App-Info.plist
@@ -13,26 +13,11 @@
 		<string>icon.png</string>
 	</array>
 	<key>CFBundleIcons</key>
-	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>icon-80</string>
-				<string>icon-120</string>
-				<string>icon-Small</string>
-				<string>icon102x120</string>
-				<string>icon</string>
-				<string>icon29x29</string>
-				<string>icon58x58</string>
-				<string>icon80x80</string>
-			</array>
-		</dict>
-	</dict>
+	<dict/>
 	<key>CFBundleIcons~ipad</key>
 	<dict/>
 	<key>CFBundleIdentifier</key>
-	<string>com.dexconsulting.sep13</string>
+	<string>com.cnfanews.ad</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
