--- a/CNFA AD /CNFANews AppTests/CNFANews AppTests-Info.plist
+++ b/CNFA AD /CNFANews AppTests/CNFANews AppTests-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.dexconsulting.Adhoc292013</string>
+	<string>com.cnfanews.ad</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
@@ -17,6 +17,6 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.0</string>
 </dict>
 </plist>
